some enhancemenets - after years

--- a/src/App.less
+++ b/src/App.less
@@ -14,10 +14,16 @@ html div{
     text-align: center;
     vertical-align: middle;
     font-size: 40px;
+    color: #ccd;
 
     &:hover {
       cursor: pointer;
+      color: black;
     }
+  }
+
+  .select-figure.selected {
+    color: black;
   }
 }
 
@@ -36,14 +42,15 @@ html div{
   margin: 2px;
   height: 500px;
   width: 480px;
-  background-color: black;
+  background-color: #ccd;
 
   .field-container {
-    width: 150px;
-    height: 155px;
+    width: 140px;
+    height: 140px;
     background-color: white;
     margin: 5px;
     text-align: center;
+    padding: 5px 5px;
     font-size: 140px;
     overflow: hidden;
 
